localdev/patch-solid-server-uri.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-solid-server
spec:
  template:
    spec:
      containers:
      - name: node-solid-server
